Added lombok/json as dependencies