@@ -1,44 +1,56 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10/userguide/building_java_projects.html in the Gradle documentation.
- * This project uses @Incubating APIs which are subject to change.
- */
-
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'application'
+    id 'java'
+    id 'maven-publish'
 }
 
+group = 'at.czlabinger'
+version = '1.0-SNAPSHOT'
+sourceCompatibility = '21'
+targetCompatibility = '21'
+
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
+    maven {
+        url 'https://projectlombok.org/edge-releases'
+    }
 }
 
 dependencies {
-    // This dependency is used by the application.
-    implementation libs.guava
+    // JUnit
+    testImplementation platform('org.junit:junit-bom:5.11.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params'
+
+    // Lombok
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'org.projectlombok:lombok:edge-SNAPSHOT'
+    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
+
+    // JSON
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
 }
 
-testing {
-    suites {
-        // Configure the built-in test suite
-        test {
-            // Use JUnit Jupiter test framework
-            useJUnitJupiter('5.10.3')
+test {
+    useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
         }
     }
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--enable-preview"]
 }
 
-application {
-    // Define the main class for the application.
-    mainClass = 'org.example.App'
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'at.czlabinger.Controller',
+                'Class-Path': 'lib/'
+        )
+    }
 }
